--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     <li class="nav-item"><a class="nav-link" href="#skills-sec">skills</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#programs-known">projects</a></li>
                 </ul>
             </div>
           </nav>
@@ -75,7 +75,7 @@
             </div>
             <hr>
             <div class="program-lang">
-                <h2>Progamming languages known</h2>
+                <h2 id="programs-known">Progamming languages known</h2>
                 <div class="container">
                     <div class="row">
                         <div class="col-md">
